osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[Optional[str, int, float]].txt
error: `Optional` must have exactly one argument
--> main.sml:1:5
     |
   1 | Foo: Optional[str, int, float] = JsonData(path='$.foo')
     |      ^ got 3 arguments